force-app/main/default/objects/School__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Details_Link__c</fullName>
        <inlineHelpText>Used in the auto-response emails to parents when they submit an enquiry through the Status website</inlineHelpText>
        <label>Contact Details Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Financial_Year_Cut_Off_Date_TY_NAE__c</fullName>
        <description>Used to define the correct &apos;Starting Date (for KPIs)&apos; for students starting after the financial year cut-off (usually week 41 or 42). Should be the date of the Saturday of the given week.</description>
        <label>Financial Year Cut-Off Date TY (NAE)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Day_of_Next_Fiscal_Year__c</fullName>
        <label>First Day of Next Fiscal Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Day_of_This_Fiscal_Year__c</fullName>
        <label>First Day of This Fiscal Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_ID_Case_Safe__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record ID (Case Safe)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Period__c</fullName>
        <description>Used in the auto-response to parents</description>
        <label>Response Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Full_Name__c</fullName>
        <label>School Full Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_T1_NY__c</fullName>
        <label>Start Date T1 NY</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_T1_TY__c</fullName>
        <label>Start Date T1 TY</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_T2_TY__c</fullName>
        <label>Start Date T2 TY</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_T3_TY__c</fullName>
        <label>Start Date T3 TY</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>What_s_Happening_Link__c</fullName>
        <inlineHelpText>Used in the auto-response emails to parents when they submit an enquiry through the Status website</inlineHelpText>
        <label>What&apos;s Happening Link</label>
        <type>Url</type>
    </fields>
    <label>School</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>School_Full_Name__c</columns>
        <columns>Response_Period__c</columns>
        <columns>What_s_Happening_Link__c</columns>
        <columns>Contact_Details_Link__c</columns>
        <columns>Record_ID_Case_Safe__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>School Code/UID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schools</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>