force-app/main/default/objects/School__c/fields/ActivateApplicationForm__c.field-meta.xml
<CustomField>
    <fullName>ActivateApplicationForm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate Application Form</label>
    <type>Checkbox</type>
</CustomField>