force-app/main/default/objects/School__c/fields/AdditionalAcknowledgementMailInfo__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAcknowledgementMailInfo__c</fullName>
    <description>Used for Email Template body sent to Parent for Acknowledgment of Application form</description>
    <label>Additional Acknowledgement Mail Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>