force-app/main/default/objects/School__c/fields/AdditionalAcknowledgementMailInfoBL__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAcknowledgementMailInfoBL__c</fullName>
    <label>Additional Acknowledgement Mail Info BL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>