force-app/main/default/objects/School__c/fields/AdmissionsQueueCoordinator__c.field-meta.xml
<CustomField>
    <fullName>AdmissionsQueueCoordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The person named in this field is who the Online Forms will be assigned too.</inlineHelpText>
    <label>Admissions Queue Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Schools</relationshipName>
    <type>Lookup</type>
</CustomField>