force-app/main/default/objects/School__c/fields/AuthorizationParticipateSchoolTrips__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationParticipateSchoolTrips__c</fullName>
    <description>Authorization to participate in school trips</description>
    <label>Authorized participation</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>