force-app/main/default/objects/School__c/fields/AvailableForIsamsPush__c.field-meta.xml
<CustomField>
    <fullName>AvailableForIsamsPush__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for isams push</label>
    <type>Checkbox</type>
</CustomField>