force-app/main/default/objects/School__c/fields/BedrockSchool__c.field-meta.xml
<CustomField>
    <fullName>BedrockSchool__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify the Bedrock schools for Task to Follow up</description>
    <label>Bedrock School</label>
    <type>Checkbox</type>
</CustomField>