force-app/main/default/objects/School__c/fields/Bilingual_Name_Opps__c.field-meta.xml
<CustomField>
    <fullName>Bilingual_Name_Opps__c</fullName>
    <description>Used for the Bilingual language to populate the field on the opportunity</description>
    <formula>TEXT( Bilingual__c )</formula>
    <label>Bilingual Name Opps</label>
    <type>Text</type>
</CustomField>