force-app/main/default/objects/School__c/fields/Boarding_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Boarding_Deposit__c</fullName>
    <inlineHelpText>Deposit amount for students who are full boarding</inlineHelpText>
    <label>Boarding Deposit</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>