force-app/main/default/objects/School__c/fields/Business_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Manager_Name__c</fullName>
    <label>Business Manager Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>