force-app/main/default/objects/School__c/fields/Business_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Manager_Phone__c</fullName>
    <label>Business Manager Phone</label>
    <type>Phone</type>
</CustomField>