force-app/main/default/objects/School__c/fields/Capacity_Report_URL__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Report_URL__c</fullName>
    <inlineHelpText>Capacity report link based on all the Year/Grade (SUM) associated to this School</inlineHelpText>
    <label>Capacity Report URL</label>
    <type>Url</type>
</CustomField>