force-app/main/default/objects/School__c/fields/CapacityTotal__c.field-meta.xml
<CustomField>
    <fullName>CapacityTotal__c</fullName>
    <label>Capacity Total</label>
    <summarizedField>YearGrade__c.CapacityTotal__c</summarizedField>
    <summaryForeignKey>YearGrade__c.SchoolName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>