force-app/main/default/objects/School__c/fields/CapacityUsed__c.field-meta.xml
<CustomField>
    <fullName>CapacityUsed__c</fullName>
    <label>Capacity Used</label>
    <summarizedField>YearGrade__c.CapacityUsed__c</summarizedField>
    <summaryForeignKey>YearGrade__c.SchoolName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>