force-app/main/default/objects/School__c/fields/ChildPhotoDisclaimer__c.field-meta.xml
<CustomField>
    <fullName>ChildPhotoDisclaimer__c</fullName>
    <label>Child Photo Disclaimer</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>