force-app/main/default/objects/School__c/fields/ChildPhotoDisclaimerBilingual__c.field-meta.xml
<CustomField>
    <fullName>ChildPhotoDisclaimerBilingual__c</fullName>
    <label>Child Photo Disclaimer Bilingual</label>
    <length>80000</length>
    <type>Html</type>
</CustomField>