force-app/main/default/objects/School__c/fields/Clause_a__c.field-meta.xml
<CustomField>
    <fullName>Clause_a__c</fullName>
    <label>Clause (a)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>