force-app/main/default/objects/School__c/fields/Clause_b__c.field-meta.xml
<CustomField>
    <fullName>Clause_b__c</fullName>
    <label>Clause (b)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>