force-app/main/default/objects/School__c/fields/Clause_c__c.field-meta.xml
<CustomField>
    <fullName>Clause_c__c</fullName>
    <label>Clause (c)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>