force-app/main/default/objects/School__c/fields/Clause_d__c.field-meta.xml
<CustomField>
    <fullName>Clause_d__c</fullName>
    <label>Clause (d)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>