force-app/main/default/objects/School__c/fields/Clause_e__c.field-meta.xml
<CustomField>
    <fullName>Clause_e__c</fullName>
    <label>Clause (e)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>