force-app/main/default/objects/School__c/fields/Clause_f__c.field-meta.xml
<CustomField>
    <fullName>Clause_f__c</fullName>
    <label>Clause (f)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>