force-app/main/default/objects/School__c/fields/Conga_Clause_a__c.field-meta.xml
<CustomField>
    <fullName>Conga_Clause_a__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conga Clause (a)</label>
    <type>Checkbox</type>
</CustomField>