force-app/main/default/objects/School__c/fields/Conga_Clause_b__c.field-meta.xml
<CustomField>
    <fullName>Conga_Clause_b__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conga Clause (b)</label>
    <type>Checkbox</type>
</CustomField>