force-app/main/default/objects/School__c/fields/Credit_Card_Charge__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Charge__c</fullName>
    <description>Amount charged to process the deposit - mapped to the FA forms</description>
    <inlineHelpText>Amount charged to process the deposit - mapped to the FA forms</inlineHelpText>
    <label>Credit Card Charge</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>