force-app/main/default/objects/School__c/fields/CurriculumProvided__c.field-meta.xml
<CustomField>
    <fullName>CurriculumProvided__c</fullName>
    <label>Curriculum Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Curriculum</valueSetName>
    </valueSet>
</CustomField>