force-app/main/default/objects/School__c/fields/DayBoarding__c.field-meta.xml
<CustomField>
    <fullName>DayBoarding__c</fullName>
    <label>Day/Boarding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Boarding</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>