force-app/main/default/objects/School__c/fields/Deposit_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Form_Link__c</fullName>
    <description>Deposit link - bespoke to school object and used to populate a formula field on the account object</description>
    <inlineHelpText>Deposit link - bespoke to school object and used to populate a formula field on the account object</inlineHelpText>
    <label>Deposit Form Link</label>
    <type>Url</type>
</CustomField>