force-app/main/default/objects/School__c/fields/Discount_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Discount_Threshold__c</fullName>
    <label>Discount Threshold $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>