force-app/main/default/objects/School__c/fields/Discount_Threshold_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Threshold_Percent__c</fullName>
    <label>Discount Threshold %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>