force-app/main/default/objects/School__c/fields/Early_Pay_Discount_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Early_Pay_Discount_Deadline__c</fullName>
    <label>Early Pay Discount Deadline</label>
    <type>Date</type>
</CustomField>