force-app/main/default/objects/School__c/fields/Early_Pay_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Early_Pay_Discount_Percent__c</fullName>
    <label>Early Pay Discount Percent</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>