force-app/main/default/objects/School__c/fields/Email_Signer_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Signer_Name__c</fullName>
    <label>Email Signer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>