force-app/main/default/objects/School__c/fields/Email_Signer_Title__c.field-meta.xml
<CustomField>
    <fullName>Email_Signer_Title__c</fullName>
    <label>Email Signer Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>