force-app/main/default/objects/School__c/fields/ET_BilingualLink1Label__c.field-meta.xml
<CustomField>
    <fullName>ET_BilingualLink1Label__c</fullName>
    <label>ET Bilingual Link1 Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>