force-app/main/default/objects/School__c/fields/ET_BilingualSchoolName__c.field-meta.xml
<CustomField>
    <fullName>ET_BilingualSchoolName__c</fullName>
    <label>ET Bilingual School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>