force-app/main/default/objects/School__c/fields/ET_BilingualSignature__c.field-meta.xml
<CustomField>
    <fullName>ET_BilingualSignature__c</fullName>
    <label>ET Bilingual Signature</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>