force-app/main/default/objects/School__c/fields/ET_EnglishLink2Label__c.field-meta.xml
<CustomField>
    <fullName>ET_EnglishLink2Label__c</fullName>
    <label>ET English Link2 Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>