force-app/main/default/objects/School__c/fields/ET_EnglishSchoolName__c.field-meta.xml
<CustomField>
    <fullName>ET_EnglishSchoolName__c</fullName>
    <label>ET English School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>