force-app/main/default/objects/School__c/fields/ET_EnglishSignature__c.field-meta.xml
<CustomField>
    <fullName>ET_EnglishSignature__c</fullName>
    <label>ET English Signature</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>