force-app/main/default/objects/School__c/fields/ET_Subject__c.field-meta.xml
<CustomField>
    <fullName>ET_Subject__c</fullName>
    <label>ET Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>