force-app/main/default/objects/School__c/fields/ET_WeChatAccount__c.field-meta.xml
<CustomField>
    <fullName>ET_WeChatAccount__c</fullName>
    <label>ET WeChat Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>