force-app/main/default/objects/School__c/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <label>Facebook URL</label>
    <type>Url</type>
</CustomField>