force-app/main/default/objects/School__c/fields/Finance_Fee_2_Pay__c.field-meta.xml
<CustomField>
    <fullName>Finance_Fee_2_Pay__c</fullName>
    <label>Finance Fee 2 Pay</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>