force-app/main/default/objects/School__c/fields/Finance_Fee_Percent_10_Pay__c.field-meta.xml
<CustomField>
    <fullName>Finance_Fee_Percent_10_Pay__c</fullName>
    <label>Finance Fee % 10 Pay</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>