force-app/main/default/objects/School__c/fields/Financing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Financing_Fee__c</fullName>
    <label>Financing Fee 10 Pay</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>