force-app/main/default/objects/School__c/fields/Instagram__c.field-meta.xml
<CustomField>
    <fullName>Instagram__c</fullName>
    <label>Instagram URL</label>
    <type>Url</type>
</CustomField>