force-app/main/default/objects/School__c/fields/IsNAESchool__c.field-meta.xml
<CustomField>
    <fullName>IsNAESchool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is NAE School?</label>
    <type>Checkbox</type>
</CustomField>