force-app/main/default/objects/School__c/fields/Link1__c.field-meta.xml
<CustomField>
    <fullName>Link1__c</fullName>
    <description>Used in email template for What&apos;s happening</description>
    <inlineHelpText>Used in email template for What&apos;s happening</inlineHelpText>
    <label>Link1</label>
    <type>Url</type>
</CustomField>