force-app/main/default/objects/School__c/fields/Link2__c.field-meta.xml
<CustomField>
    <fullName>Link2__c</fullName>
    <description>Used in email template for Contact Us</description>
    <inlineHelpText>Used in email template for Contact Us</inlineHelpText>
    <label>Link2</label>
    <type>Url</type>
</CustomField>