force-app/main/default/objects/School__c/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <label>LinkedIn URL</label>
    <type>Url</type>
</CustomField>