force-app/main/default/objects/School__c/fields/MedicalTermsConditions__c.field-meta.xml
<CustomField>
    <fullName>MedicalTermsConditions__c</fullName>
    <label>Medical Terms &amp; Conditions</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>