force-app/main/default/objects/School__c/fields/MedicalTermsConditionsBilingual__c.field-meta.xml
<CustomField>
    <fullName>MedicalTermsConditionsBilingual__c</fullName>
    <label>Medical Terms and Conditions Bilingual</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>