force-app/main/default/objects/School__c/fields/OptIn24hrVisit__c.field-meta.xml
<CustomField>
    <fullName>OptIn24hrVisit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>24 Hr Visit Follow-up</label>
    <type>Checkbox</type>
</CustomField>