force-app/main/default/objects/School__c/fields/OptInAutomatedTask__c.field-meta.xml
<CustomField>
    <fullName>OptInAutomatedTask__c</fullName>
    <defaultValue>true</defaultValue>
    <label>8/15/22/36 Follow-up</label>
    <type>Checkbox</type>
</CustomField>