force-app/main/default/objects/School__c/fields/OptInLeadFollowUp__c.field-meta.xml
<CustomField>
    <fullName>OptInLeadFollowUp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>24 Hr Lead Follow-up</label>
    <type>Checkbox</type>
</CustomField>