force-app/main/default/objects/School__c/fields/PDFFieldVisibility__c.field-meta.xml
<CustomField>
    <fullName>PDFFieldVisibility__c</fullName>
    <description>List of fields visible in application form PDF</description>
    <label>PDF Field Visibility</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>