force-app/main/default/objects/School__c/fields/PermissionToSubmitLetter__c.field-meta.xml
<CustomField>
    <fullName>PermissionToSubmitLetter__c</fullName>
    <description>Used in Application Form PDF to render the text to give permission to school to submit letter</description>
    <label>Permission To Submit Letter</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>