force-app/main/default/objects/School__c/fields/Pre_Enrolment_Form__c.field-meta.xml
<CustomField>
    <fullName>Pre_Enrolment_Form__c</fullName>
    <description>Pre-Enrolment - bespoke to school object and used to populate a formula field on the account object</description>
    <inlineHelpText>Pre-Enrolment - bespoke to school object and used to populate a formula field on the account object</inlineHelpText>
    <label>Pre-Enrolment Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>