force-app/main/default/objects/School__c/fields/PrivacyPolicy__c.field-meta.xml
<CustomField>
    <fullName>PrivacyPolicy__c</fullName>
    <label>Privacy Policy</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>