force-app/main/default/objects/School__c/fields/PrivacyPolicyBilingual__c.field-meta.xml
<CustomField>
    <fullName>PrivacyPolicyBilingual__c</fullName>
    <label>Privacy Policy Bilingual</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>