force-app/main/default/objects/School__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <description>OLD VALUE - IMAGE(&apos;https://c.eu9.visual.force.com/resource/1528691396000/NingboQRCode&apos;, &apos;Ningbo QR Code&apos; )</description>
    <formula>IMAGE(QR_Code_URL__c,  Name &amp;&apos; QR Code&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>