force-app/main/default/objects/School__c/fields/QR_Code_URL__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_URL__c</fullName>
    <description>Used in the QR_Code__c</description>
    <label>QR Code URL</label>
    <type>Url</type>
</CustomField>