force-app/main/default/objects/School__c/fields/Re_Enrolment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Enrolment_Start_Date__c</fullName>
    <label>Re-Enrolment Start Date</label>
    <type>Date</type>
</CustomField>