force-app/main/default/objects/School__c/fields/Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>Reference_Date__c</fullName>
    <inlineHelpText>Update this to be the first day of your school year, this is used in the calculation of the Enrolment year on the opportunity</inlineHelpText>
    <label>Reference Date</label>
    <type>Date</type>
</CustomField>