force-app/main/default/objects/School__c/fields/School_Admissions_Team_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>School_Admissions_Team_Email_Address__c</fullName>
    <description>Admissions team central email address. to be used for the notifications of new/updated opportunities come in from the FA form</description>
    <label>School Admissions Team Email Address</label>
    <type>Email</type>
</CustomField>