force-app/main/default/objects/School__c/fields/School_Logo__c.field-meta.xml
<CustomField>
    <fullName>School_Logo__c</fullName>
    <label>School Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>