force-app/main/default/objects/School__c/fields/SchoolCode__c.field-meta.xml
<CustomField>
    <fullName>SchoolCode__c</fullName>
    <label>School Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>