force-app/main/default/objects/School__c/fields/SchoolShortName__c.field-meta.xml
<CustomField>
    <fullName>SchoolShortName__c</fullName>
    <label>School short name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>