force-app/main/default/objects/School__c/fields/Send_Contracts_By__c.field-meta.xml
<CustomField>
    <fullName>Send_Contracts_By__c</fullName>
    <label>Send Contracts By</label>
    <type>Date</type>
</CustomField>