force-app/main/default/objects/School__c/fields/SinaWeibo__c.field-meta.xml
<CustomField>
    <fullName>SinaWeibo__c</fullName>
    <label>SinaWeibo URL</label>
    <type>Url</type>
</CustomField>