force-app/main/default/objects/School__c/fields/SummerApplicationEmailBody__c.field-meta.xml
<CustomField>
    <fullName>SummerApplicationEmailBody__c</fullName>
    <label>Summer Application Email Body</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>