force-app/main/default/objects/School__c/fields/SummerApplicationEmailBodyBilingual__c.field-meta.xml
<CustomField>
    <fullName>SummerApplicationEmailBodyBilingual__c</fullName>
    <label>Summer Application Email Body Bilingual</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>