force-app/main/default/objects/School__c/fields/SummerEnquiryEmailBody__c.field-meta.xml
<CustomField>
    <fullName>SummerEnquiryEmailBody__c</fullName>
    <label>Summer Enquiry Email Body</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>