force-app/main/default/objects/School__c/fields/SummerEnquiryEmailBodyBilingual__c.field-meta.xml
<CustomField>
    <fullName>SummerEnquiryEmailBodyBilingual__c</fullName>
    <label>Summer Enquiry Email Body Bilingual</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>