force-app/main/default/objects/School__c/fields/TermsAndConditions__c.field-meta.xml
<CustomField>
    <fullName>TermsAndConditions__c</fullName>
    <label>Terms And Conditions</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>