force-app/main/default/objects/School__c/fields/TermsAndConditionsBilingual__c.field-meta.xml
<CustomField>
    <fullName>TermsAndConditionsBilingual__c</fullName>
    <label>Terms and Conditions Bilingual</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>