force-app/main/default/objects/School__c/fields/TikTok__c.field-meta.xml
<CustomField>
    <fullName>TikTok__c</fullName>
    <label>TikTok URL</label>
    <type>Url</type>
</CustomField>