force-app/main/default/objects/School__c/fields/Vimeo__c.field-meta.xml
<CustomField>
    <fullName>Vimeo__c</fullName>
    <label>Vimeo URL</label>
    <type>Url</type>
</CustomField>