force-app/main/default/objects/School__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <label>Website URL</label>
    <type>Url</type>
</CustomField>