force-app/main/default/objects/School__c/fields/WeChat__c.field-meta.xml
<CustomField>
    <fullName>WeChat__c</fullName>
    <label>WeChat URL</label>
    <type>Url</type>
</CustomField>