force-app/main/default/objects/School__c/fields/Wire_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Wire_Account_Number__c</fullName>
    <label>Wire Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>