force-app/main/default/objects/School__c/fields/Wire_Bank_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Wire_Bank_Address_Line_1__c</fullName>
    <label>Wire Bank Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>