force-app/main/default/objects/School__c/fields/Wire_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Wire_Bank_Name__c</fullName>
    <label>Wire Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>