force-app/main/default/objects/School__c/fields/Wire_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Wire_Routing_Number__c</fullName>
    <label>Wire Routing Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>