force-app/main/default/objects/School__c/fields/Wire_Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>Wire_Swift_Code__c</fullName>
    <label>Wire Swift Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>